Alteração MainPage e Comparação

--- a/API-Web-Data-Viz/.env.dev
+++ b/API-Web-Data-Viz/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST='localhost'
 DB_DATABASE='TransControl'
 DB_USER='root'
-DB_PASSWORD= '090905'
+DB_PASSWORD= 'e21s20@1'
 DB_PORT='3306'
 
 # Configurações do servidor de aplicação
