--- a/API-Web-Data-Viz/.env.dev
+++ b/API-Web-Data-Viz/.env.dev
@@ -3,12 +3,12 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados
 DB_HOST='localhost'
 DB_DATABASE='TransControl'
-DB_USER='root'
-DB_PASSWORD= 'e21s20@1'
-DB_PORT='3306'
+DB_USER='aluno'
+DB_PASSWORD= 'Sptech#2024'
+DB_PORT='3307'
 
 # Configurações do servidor de aplicação
-APP_PORT=3332
+APP_PORT=3333
 APP_HOST='localhost'
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
