--- a/API-Web-Data-Viz/.env.dev
+++ b/API-Web-Data-Viz/.env.dev
@@ -4,8 +4,8 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST='localhost'
 DB_DATABASE='TransControl'
 DB_USER='aluno'
-DB_PASSWORD= 'Sptech#2024'
-DB_PORT= 3307 
+DB_PASSWORD= 'sptech'
+DB_PORT= 3306 
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
