Ajustando o env.dev v2

--- a/API-Web-Data-Viz/.env.dev
+++ b/API-Web-Data-Viz/.env.dev
@@ -3,15 +3,9 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados
 DB_HOST='localhost'
 DB_DATABASE='TransControl'
-<<<<<<< HEAD
-DB_USER='aluno'
-DB_PASSWORD= 'Sptech#2024'
-DB_PORT= 3307 
-=======
 DB_USER='root'
-DB_PASSWORD= '19122002M.oT' 
-DB_PORT= 3306 
->>>>>>> 526cf56b3c0aa74fd5cbef04495429e6bd7eca67
+DB_PASSWORD= 'SPtech#2024'
+DB_PORT= 3307  
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
